Basic fix for #38 to prevent overflows
Now crops all to 180px, need to look into centring the thumbs.

--- a/_sass/_shows.sass
+++ b/_sass/_shows.sass
@@ -49,6 +49,10 @@
 
     @include set-property-to-gutter(margin-bottom)
 
+    // Crop all photos to prevent horrible overflows
+    height: 180px
+    overflow: hidden
+
     img
       width: 100%
       box-shadow: 0px -1px darken($color-black, 20%)
